tests/semantic_errors/undeclared_var.ind
func test(x) {
    y = x + z; // z is not defined
    return y;
}